# gleam

./: .gitignore  CONTRIBUTING.md  LICENSE  PIPELINE.py  README.md  constants.param  constants.py  constants.yaml  gaussian_fitting.py  line_fitting.py  main.py  matplotlibparams.py  plot_gaussian.py  pyproject.toml  quality_control.sh  read_files.py  spectra_fitted_rsvao  spectra_operations.py  write_files.py
example/: gleamconfig.yaml
example/A773/: linefits.A773.WHT_R316R.Q1_EXT1.008.fits  spec1d.A773.WHT_R316R.Q1_EXT1.008.fits
example/line_lists/: Main_optical_lines.fits  Sky_bands.fits
gleam/: __init__.py  constants.py  gaussian_fitting.py  main.py  matplotlibparams.py  plot_gaussian.py  read_files.py  spectra_operations.py
line_lists/: HA_NII.fits  HA_NII.txt  Lines_to_measure_HA.fits  Lines_to_measure_HA_clusters.fits  Main_optical_lines.fits  Main_optical_lines_broad.fits  Main_optical_lines_broad.txt  Optical_lines.fits  Optical_lines.txt  Sky_bands.fits  rsvao  rsvao.fits  rsvao_broad  rsvao_broad.fits  rsvao_broad_2line  rsvao_broad_2line.fits  sky_line_peaks.py
