[tool.poetry]
name = "gleam"
version = "1.0.0"
description = "Galaxy Line Emission and Absorption Modelling"
authors = ["Andra Stroe", "Victor-Nicolae Savu"]

[tool.poetry.dependencies]
python = "^3.8"
lmfit = "^1.0.0"
matplotlib = "^3.2.1"
astropy = "^4.0.1"
colorama = "^0.4.3"
numpy = "^1.18.2"
click = "^7.1.1"
pydantic = "^1.5"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
ipython = "^7.13.0"

[tool.poetry.scripts]
gleam = 'gleam:pipeline'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

