[tool.poetry]
name = "astro-gleam"
version = "1.3.0"
description = "Galaxy Line Emission and Absorption Modeling"
authors = ["Andra Stroe", "Victor-Nicolae Savu"]
packages = [
    { include = "gleam" }
]

[tool.poetry.dependencies]
python = "^3.8"
lmfit = "^1.0.0"
matplotlib = "=3.3.4"
astropy = "^4.0.1"
colorama = "^0.4.3"
numpy = "^1.21"
click = "^7.1.1"
pydantic = "^1.6.2"
pyyaml = "^5.4"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
ipython = "^7.16.3"
rope = "^0.18.0"

[tool.poetry.scripts]
gleam = 'gleam:pipeline'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

