[tool.poetry]
name = "astro-gleam"
version = "1.4.0"
description = "Galaxy Line Emission and Absorption Modeling"
authors = ["Andra Stroe <example@example.com>", "Victor-Nicolae Savu <example@example.com>"]
packages = [
    { include = "gleam" }
]

[tool.poetry.dependencies]
python = "^3.8"
lmfit = "^1.0.0"
matplotlib = "=3.7.1"
astropy = "^5.2.2"
colorama = "^0.4.3"
numpy = "^1.21"
click = "^8.1.3"
pydantic = "^1.6.2"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
ipython = "^7.16.3"
rope = "^1.8.0"

[tool.poetry.scripts]
gleam = 'gleam:pipeline'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

